<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_image">

    <fragment
        android:id="@+id/navigation_image"
        android:name="com.projetbidouillekotlin.ui.img.ImgFragment"
        android:label="@string/title_image"
        tools:layout="@layout/fragment_image" />

    <fragment
        android:id="@+id/navigation_read"
        android:name="com.projetbidouillekotlin.ui.read.ReadFragment"
        android:label="@string/title_read"
        tools:layout="@layout/fragment_read" />

    <fragment
        android:id="@+id/navigation_write"
        android:name="com.projetbidouillekotlin.ui.write.WriteFragment"
        android:label="@string/title_write"
        tools:layout="@layout/fragment_write" />
</navigation>